# wmi-rest

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
hyperv/: Cargo.toml
hyperv/src/: lib.rs  memory.rs  network.rs  processor.rs  vhd.rs  vm.rs
powershell-rs/: Cargo.toml
powershell-rs/src/: lib.rs  util.rs
