[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["tracing"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal"] }
powershell-rs = { path = "../powershell-rs"}
hyperv = { path = "../hyperv" }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
