[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
powershell-rs = { path = "../powershell-rs" }
hyperv = { path = "../hyperv" }
axum = { version = "0.6.19", features = ["tracing"] }
tokio = { version = "1.29.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower-http = { version = "0.4.3", features = ["trace", "normalize-path"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.72"
serde_json = "1.0.103"
tower-layer = "0.3.2"
